enterprise-platform/k8s/mesh/00-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: nexuscore-prod
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-data
  namespace: nexuscore-data
spec:
  mtls:
    mode: STRICT
